--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   # Python packages
+  - pip>=21.0.0
   - python>=3.8
   - numpy>=1.21.0
   - pandas>=1.3.0
@@ -12,6 +13,8 @@ dependencies:
   - seaborn>=0.11.0
   - jupyter>=1.0.0
   - ipykernel>=6.0.0
+  - openpyxl>=3.0.0
+  - xlsxwriter>=3.0.0
 
   # R packages
   - r-base>=4.0.0
