--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - python>=3.8
   - numpy>=1.21.0
   - pandas>=1.3.0
+  - gcp>=0.34.0
   - scikit-learn>=1.0.0
   - matplotlib>=3.4.0
   - seaborn>=0.11.0
