--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,6 @@
+
+### Not final, subject to change and additions.
+
 name: risk-model-env
 channels:
   - conda-forge
@@ -7,7 +10,6 @@ dependencies:
   - python>=3.8
   - numpy>=1.21.0
   - pandas>=1.3.0
-  - gcp>=0.34.0
   - scikit-learn>=1.0.0
   - matplotlib>=3.4.0
   - seaborn>=0.11.0
@@ -28,6 +30,8 @@ dependencies:
 
   # Jupyter extensions
   - jupyter_contrib_nbextensions
+
+  - git-lfs>=3.0.0  # For large files support in Jupyter
 
   # Mamba (faster alternative to conda)
   - mamba>=0.15.0
