--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,8 @@ dependencies:
   - scikit-learn>=1.0.0
   - matplotlib>=3.4.0
   - seaborn>=0.11.0
+  - geopandas>=0.9.0
+  - geopy>=2.1.0
   - jupyter>=1.0.0
   - ipykernel>=6.0.0
   - openpyxl>=3.0.0
